--- a/index.html
+++ b/index.html
@@ -53,14 +53,14 @@
         <div class="quadro-img">
             <img class="perfil-photo" src="imagens/ander.png">
         </div>
-        <div id="info-anima" class="info-page">
+        <div id="info-anima" class="info-page container">
             <h3>Anderson Augusto Ferrari</h3><br>
             <p>Programador Full-Stack </p>
             <p>(19) 9 8779-3121</p>
             <p>andersonaugustoferrari@hotmail.com</p><br>
             <h4>Sobre mim:</h4>
             <p>&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbspAtualmente trabalho como desenvolvedor Back-end, utilizando Node.js (Express) com arquitetura MVC.
-                Tenho grande experência com Front-end, sendo: HTML, CSS e Javascript. Também tenho conhecimento básico em desenvolvimento de SPA com os Frameworks: Angular, React.js e Vue.js. Trabalhei com plataformas de gerenciamento de projetos e sistema de versionamento, sendo: Github, Trello e Asana.
+                Tenho grande experiência com Front-end, sendo: HTML, CSS e Javascript. Também tenho conhecimento básico em desenvolvimento de SPA com os Frameworks: Angular, React.js e Vue.js. Trabalhei com plataformas de gerenciamento de projetos e sistema de versionamento, sendo: Github, Trello e Asana.
             </p>
         </div>
     </div>
@@ -95,90 +95,90 @@
 
 <section class="main-box">
     <div class="scroll-n2">
-        <div class="title-n2">
+        <div class="title-n2 container-top">
             <h1 class="colorWhite titleNv1">Habilidades</h1>
         </div>
-        <div class="skills-n2">
+        <div class="skills-n2 container">
             <div>
-                <div id="html" class="skill-bar">HTML</div>
-                <div id="css" class="skill-bar">CSS</div>
-                <div id="js" class="skill-bar">Javascript</div>
-                <div id="flex" class="skill-bar">Flexbox</div>
-                <div id="jquery" class="skill-bar">jquery</div>
-                <div id="boots" class="skill-bar">Bootstrap</div>
+                <div id="html" class="skill-bar size-of-bar">HTML</div>
+                <div id="css" class="skill-bar size-of-bar">CSS</div>
+                <div id="js" class="skill-bar size-of-bar">Javascript</div>
+                <div id="flex" class="skill-bar size-of-bar">Flexbox</div>
+                <div id="jquery" class="skill-bar size-of-bar">jquery</div>
+                <div id="boots" class="skill-bar size-of-bar">Bootstrap</div>
             </div>
             <div>
-                <div id="react" class="skill-bar">React</div>
-                <div id="angular" class="skill-bar">Angular</div>
-                <div id="git" class="skill-bar">Git hub</div>
-                <div id="node" class="skill-bar">Node JS (express)</div>
-                <div id="sql" class="skill-bar">SQL server</div>
-                <div id="eng" class="skill-bar">Inglês (Intermediário)</div>
+                <div id="react" class="skill-bar size-of-bar">React</div>
+                <div id="angular" class="skill-bar size-of-bar">Angular</div>
+                <div id="git" class="skill-bar size-of-bar">Git hub</div>
+                <div id="node" class="skill-bar size-of-bar">Node JS (express)</div>
+                <div id="sql" class="skill-bar size-of-bar">SQL server</div>
+                <div id="eng" class="skill-bar size-of-bar">Inglês (Intermediário)</div>
             </div>
         </div>
     </div>
 </section>
 
 <section class="main-box">
-  <div class="scroll-n2">
-    <div class="title-n2">
+  <div class="scroll-n2 container">
+    <div class="title-n2 container-top">
         <h1 class="colorWhite titleNv1">Projetos</h1>
     </div>
       <div class="skills-n2 projects">
           <a href="./botoes/">  
-            <div class="btn-projects">
+            <div class="btn-projects card-fundo">
               <img src="./imagens/buttonsImage.png" width="180px" alt="Buttons"/>
-              <div class="title-card">Botões</div>
+              <div class="title-card card-titulo">Botões</div>
             </div>
           </a>
           <a href="./listaDinamica/">  
-            <div class="btn-projects">
+            <div class="btn-projects card-fundo">
               <img src="./imagens/lista-de-papel.png" width="180px" alt="Lista dinâmica"/>
-              <div class="title-card">Lista dinâmica</div>
+              <div class="title-card card-titulo">Lista dinâmica</div>
             </div>
           </a>
           <a href="./jogoDaVelha/">  
-            <div class="btn-projects">
+            <div class="btn-projects card-fundo">
               <img src="./imagens/jogo-da-velha.png" width="180px" alt="jogo da velha"/>
-              <div class="title-card">Jogo da Velha</div>
+              <div class="title-card card-titulo">Jogo da Velha</div>
             </div>
           </a>
           <a href="./predio/">  
-            <div class="btn-projects">
+            <div class="btn-projects card-fundo">
               <img src="./imagens/predio-comercial.png" width="180px" alt="prédio"/>
-              <div class="title-card">Prédio</div>
+              <div class="title-card card-titulo">Prédio</div>
             </div>
           </a>
           <a href="./kanban-testes/">  
-            <div class="btn-projects">
+            <div class="btn-projects card-fundo">
               <img src="./imagens/planning.png" width="180px" alt="Analise de Testes"/>
-              <div class="title-card">Plataforma de testes</div>
+              <div class="title-card card-titulo">Plataforma de testes</div>
             </div>
           </a>
           <a href="./loja/">  
-            <div class="btn-projects">
+            <div class="btn-projects card-fundo">
               <img src="./imagens/mercado.png" width="180px" alt=""/>
-              <div class="title-card">Mercado</div>
+              <div class="title-card card-titulo">Mercado</div>
             </div>
           </a>
           <a href="#" class="disabled">  
-            <div class="btn-projects">
+            <div class="btn-projects card-fundo">
               <img src=""  width="180px" alt=""/>
-              <div class="title-card">Em breve</div>
+              <div class="title-card card-titulo">Em breve</div>
             </div>
           </a>
           <a href="#" class="disabled">  
-            <div class="btn-projects">
+            <div class="btn-projects card-fundo">
               <img src=""  width="180px" alt=""/>
-              <div class="title-card">Em breve</div>
+              <div class="title-card card-titulo">Em breve</div>
             </div>
           </a>
      </div>
 </section>
 
 <section class="main-box">
-    <div class="scroll-n4">
-        <div class="title-n2">
+    <div class="scroll-n4 container">
+        <div class="title-n2 container-top">
             <p class="colorWhite titleNv1">Entre em contato</p>
         </div>
         <form>
