--- a/jogoDaVelha/index.html
+++ b/jogoDaVelha/index.html
@@ -29,14 +29,15 @@
             <span class="playerPoints">Player Two: <p id="playerTwo"></p></span>
         </div>
 
-        <p><strong>Observações: </strong><br> A partida sempre irá começar com o X</p>
+        <p><strong>Observation: </strong>
+            <br> The game will be start with the letter X </p>
     </div>
     
     <div class="voltar">
-        <button onclick="window.history.back()">Voltar</button>
+        <button onclick="window.history.back()">Back</button>
     </div>
     <div class="voltar" style="right: 0;">
-        <button onclick="resetaJogo()">Resetar</button>
+        <button onclick="resetaJogo()">Reset</button>
     </div>
     <div id="campoSucess" class="sucess">
         <h1 id="text" class="modalJogadorCampeao"></h1>
