--- a/index.html
+++ b/index.html
@@ -169,10 +169,10 @@
               <div class="title-card card-titulo">Mercado</div>
             </div>
           </a>
-          <a href="#" class="disabled">  
+          <a href="./jogoDaForca/">  
             <div class="btn-projects card-fundo">
-              <img src=""  width="180px" alt=""/>
-              <div class="title-card card-titulo">Em breve</div>
+              <img src="./imagens/forca.png"  width="180px" alt=""/>
+              <div class="title-card card-titulo">Jogo da forca</div>
             </div>
           </a>
           <a href="#" class="disabled">  
