--- a/botoes/index.html
+++ b/botoes/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" href="./imagens/ander_ico.ico">
     <link rel="stylesheet" href="../assets/buttons.css">
     <link rel="stylesheet" href="../assets/global.css">
     <title>Botões</title>
