--- a/kanban-testes/index.html
+++ b/kanban-testes/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="paletaCores.css">
     <link rel="stylesheet" href="login.css">
+    <link rel="icon" href="./imagens/ander_ico.ico">
     <title>Acesso</title>
 </head>
 <body>
