--- a/listaDinamica/index.html
+++ b/listaDinamica/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="../assets/paleta.css">
     <link rel="stylesheet" href="../assets/global.css">
     <link rel="stylesheet" href="../assets/projeto2.css">
+    <link rel="icon" href="./imagens/ander_ico.ico">
     <title>Lista dinâmica</title>
 </head>
 <body>
