--- a/jogoDaForca/index.html
+++ b/jogoDaForca/index.html
@@ -7,6 +7,7 @@
     <link rel="icon" href="./imagens/ander_ico.ico">
     <link rel="stylesheet" href="../assets/forca.css">
     <link rel="stylesheet" href="../assets/global.css">
+    <link rel="icon" href="../imagens/ander_ico.ico">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/simple-keyboard@latest/build/css/index.css">
     <title>Jogo da forca</title>
 </head>
