--- a/index.html
+++ b/index.html
@@ -127,8 +127,8 @@
 </section>
 
 <section class="main-box anime-opacity-right">
-  <div class="scroll-n2 container">
-    <div class="title-n2 container-top">
+  <div class="scroll-n2">
+    <div class="title-n2">
         <h1 class="colorWhite titleNv1">Projetos</h1>
     </div>
       <div class="projects">
@@ -185,22 +185,34 @@
      </div>
 </section>
 
-<section class="main-box anime-opacity-left">
-    <div class="scroll-n4 container">
+<section class="main-box end-of-page anime-opacity-left">
+    <div class="scroll-n4">
         <div class="title-n2 container-top">
             <p class="colorWhite titleNv1">Entre em contato</p>
         </div>
         <form>
             <input type="hidden" name="contact_number">
-            <label>Nome</label>
+            <label class="colorWhite">Nome</label>
             <input type="text" name="Nome" id="name">
-            <label>Título</label>
+            <label class="colorWhite">Título</label>
             <input type="text" name="Título" id="title">
-            <label>Deixe sua mensagem</label>
+            <label class="colorWhite">Deixe sua mensagem</label>
             <textarea name="Deixe uma mensagem" id="message"></textarea>
             <button onclick="sendEmail(); " type="button">Enviar </button>
         </form>
     </div>
+    <div class="text-end-page">
+        <h1>Informações</h1>
+        <p>Este portfólio esta constantemente recebendo melhorias. Tenho como objetivo demonstrar todas as minhas habilidades com Javascript e desenvolver interfaces responsivas.
+        </p>
+        <p>
+          Foi desenvolvido com HTML, SCSS e Javascript puro. Estou desenvolvendo uma nova versão utilizando Vue.js.
+        </p>
+        <p>
+          Para entrar em contato , envie um e-mail através do formulário ao lado ou me fale comigo
+          pelas redes sociais.
+        </p>
+  </div>
 </section>
  
 </body>
