--- a/jogoDaForca/index.html
+++ b/jogoDaForca/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -27,7 +27,9 @@
         <span id="bars" class="bars"> </span>
     </div>
 
-    <!-- <input class="input"/> -->
+    <p id="letrasErradas"></p>
+    <p class="orientation">Ao acertar a palavra, você receberá 5 pontos por letra, também se errar a palavra você perderá 5 pontos por letra.</p>
+    <p id="pontos"></p>
     <div class="simple-keyboard"></div>
 
     <script src="https://cdn.jsdelivr.net/npm/simple-keyboard@latest/build/index.js"></script>
