--- a/index.html
+++ b/index.html
@@ -106,22 +106,23 @@
             <h1 class="colorWhite titleNv1">Habilidades</h1>
         </div>
         <div class="skills-n2 container">
-            <div>
+            <!-- <div> -->
                 <div id="html" class="skill-bar size-of-bar">HTML</div>
-                <div id="css" class="skill-bar size-of-bar">CSS</div>
+                <div id="css" class="skill-bar size-of-bar">SASS</div>
                 <div id="js" class="skill-bar size-of-bar">Javascript</div>
                 <div id="flex" class="skill-bar size-of-bar">Flexbox</div>
                 <div id="jquery" class="skill-bar size-of-bar">jquery</div>
                 <div id="boots" class="skill-bar size-of-bar">Bootstrap</div>
-            </div>
-            <div>
+            <!-- </div>
+            <div> -->
                 <div id="react" class="skill-bar size-of-bar">React</div>
                 <div id="angular" class="skill-bar size-of-bar">Angular</div>
                 <div id="git" class="skill-bar size-of-bar">Git hub</div>
                 <div id="node" class="skill-bar size-of-bar">Node JS (express)</div>
                 <div id="sql" class="skill-bar size-of-bar">SQL server</div>
+                <div id="figma" class="skill-bar size-of-bar">Figma</div>
                 <div id="eng" class="skill-bar size-of-bar">Inglês (Intermediário)</div>
-            </div>
+            <!-- </div> -->
         </div>
     </div>
 </section>
@@ -201,18 +202,18 @@
             <button onclick="sendEmail(); " type="button">Enviar </button>
         </form>
     </div>
-    <div class="text-end-page">
-        <h1>Informações</h1>
-        <p>Este portfólio esta constantemente recebendo melhorias. Tenho como objetivo demonstrar todas as minhas habilidades com Javascript e desenvolver interfaces responsivas.
-        </p>
-        <p>
-          Foi desenvolvido com HTML, SCSS e Javascript puro. Estou desenvolvendo uma nova versão utilizando Vue.js.
-        </p>
-        <p>
-          Para entrar em contato , envie um e-mail através do formulário ao lado ou me fale comigo
-          pelas redes sociais.
-        </p>
-  </div>
+      <div class="text-end-page">
+          <h1>Informações</h1>
+          <p>Este portfólio esta constantemente recebendo melhorias. Tenho como objetivo demonstrar todas as minhas habilidades com Javascript e desenvolver interfaces responsivas.
+          </p>
+          <p>
+            Foi desenvolvido com HTML, SCSS e Javascript puro. Estou desenvolvendo uma nova versão utilizando Vue.js.
+          </p>
+          <p>
+            Para entrar em contato , envie um e-mail através do formulário ao lado ou fale comigo
+            pelas redes sociais.
+          </p>
+    </div>
 </section>
  
 </body>
