--- a/index.html
+++ b/index.html
@@ -65,11 +65,7 @@
             <p>Desenvolvedor Full Stack </p><br>
             <h4>Sobre mim:</h4> 
             <p id="text">
-              Atualmente trabalho como desenvolvedor Back-end, utilizando Node.js (Express) com arquitetura MVC.
-              Tenho grande experiência com Front-end, sendo: HTML, CSS e Javascript. 
-              Também tenho conhecimento básico em desenvolvimento de SPA com os Frameworks: Angular, 
-              React.js e Vue.js. Trabalhei com plataformas de gerenciamento de projetos e sistema de versionamento, 
-              sendo: Github, Trello e Asana.  
+              Sou desenvolvedor Full Stack, possuo sólidos conhecimentos sobre Node.js (Express) com arquitetura MVC. Tenho grande experiência com Front-end, sendo: HTML, CSS , Javascript , bootstrap e jquery. Também tenho conhecimento em desenvolvimento de SPA com os Frameworks: Angular e React.js. Obtive experiência com plataformas de gerenciamento de projetos e sistema de versionamento, sendo: Github, Trello e Asana. 
             </p> 
         </div>
     </div>
